crates/frontend/core.scss
@font-face {
	font-family: 'Material Icons';
	font-style: normal;
	font-weight: 400;
	src: url("/fonts/MaterialIcons-Regular.ttf") format("truetype");
}

.material-icons {
	font-family: 'Material Icons';
	font-weight: normal;
	font-style: normal;
	font-size: 24px;
	line-height: 1;
	letter-spacing: normal;
	text-transform: none;
	display: inline-block;
	white-space: nowrap;
	word-wrap: normal;
	direction: ltr;
	font-feature-settings: 'liga';
	-moz-font-feature-settings: 'liga';
	-moz-osx-font-smoothing: grayscale;
}



:root {
	--brand: var(--orange-3);
	--text1: var(--gray-1);
	--text2: var(--gray-3);
	--surface1: var(--gray-9);
	--surface2: var(--gray-8);
	--surface3: var(--gray-7);
	--surface4: var(--gray-6);

	height: 100%;
	width: 100%;
	overflow: hidden;

	background-color: var(--surface2);
	color: var(--text1);
	accent-color: var(--brand);
}

body {
	display: flex;
	flex-direction: column;
	height: 100%;
	width: 100%;
	margin: 0;
}


:where(h1, h2, h3, h4, h5, h6, dt) {
	color: var(--text1);
}

:where(a[href]),
:where(a[href]):visited {
	color: var(--text1);

	&:hover {
		text-decoration: inherit;
	}
}


:where(input, button, textarea, select),
:where(input[type="file"])::-webkit-file-upload-button {
	color: var(--text1);
	background: var(--surface1);
}

.button {
	display: inline-flex;
	white-space: nowrap;

	font-size: var(--font-size-fluid-0);

	padding-inline: var(--size-2);
	padding-block: var(--size-1);

	color: var(--blue-1);
	border: var(--border-size-2) solid var(--brand);
	background-color: transparent;
	border-radius: var(--radius-2);

	&:hover {
		background-color: var(--surface1);
		color: var(--text1);
	}

	&:active {
		position: relative;
		inset-block-start: 2px;
	}
}



/* NAVBAR */
.navbar-module {
	display: flex;
	background: var(--surface1);
	margin-bottom: 10px;
	padding: 0px 10px;

	> a {
		padding: 10px 20px;
		text-decoration: none;
		color: var(--text1);
		text-transform: uppercase;
		user-select: none;
	}
}

/* POPUP */
.popup {
	background-color: rgba(0, 0, 0, 0.3);
	position: absolute;
	z-index: 100;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	display: flex;
	justify-content: center;
	align-content: center;
	padding: 2em 0;

	> .popup-container {
		display: flex;
		flex-direction: column;
		padding: 0.5em;
		max-height: 100%;
		background-color: var(--surface2);
		border-radius: var(--radius-2);
	}
}

/* POPUP AT SPECIFIC POINT */
.popup-at-point {
	position: absolute;
	z-index: 50;
}

/* READER CONTAINER */

.reading-container {
	height: 100%;
	width: 100%;
	overflow: hidden;

	> .book {
		display: flex;
		justify-content: center;
		align-items: center;
		height: 100%;

		&.overlay-tools > .reader {
			> .navbar {
				position: absolute;
				width: 100%;
				z-index: 100;
				background-color: var(--surface3);
				opacity: 0;
				transition: opacity 0.25s;

				&:hover {
					opacity: 1;
				}
			}

			> .progress {
				position: absolute;
				z-index: 101;
				bottom: 0;
			}
		}
	}
}


/* NOTES */
#notary {
	height: 500px;
	overflow: auto;
}

.notes {
	flex-grow: 1;
	max-width: 32em;
	margin-right: 0.5em;
	padding: 0.5em;


	.ql-stroke {
		stroke: var(--text1) !important;
	}

	.ql-picker {
		color: var(--text1) !important;
	}

	.ql-picker-options {
		background-color: var(--surface3) !important;
	}
}

/* READER */

.reader {
	position: relative;
	overflow: hidden;

	> .progress {
		width: 100%;
		background-color: #2f3337;
		height: 4px;

		> .prog-bar {
			background-color: var(--brand);
			height: 100%;
		}
	}

	.navbar {
		padding: 10px;
		user-select: none;
		-moz-user-select: none;
		-webkit-user-select: none;

		> * {
			margin-right: 10px;
		}

		> a {
			cursor: pointer;
		}
	}

	.pages {
		overflow: hidden;

		.frames {
			position: relative;
		}

		iframe {
			border: none;
			width: 100%;
			height: 100%;
		}
	}
}







/* SIDEBAR */
.sidebar > .server-list {
	list-style-type: none;
	margin-block-start: 0;
	margin-block-end: 0;
	padding-inline-start: 0;

	li {
		cursor: pointer;
		padding: 5px;
		margin-bottom: 4px;
	}
}




/* LIBRARY */
.library-list {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;

	margin-left: 1em;

	/* NORMAL */
	&.normal .library-item {
		width: 165px;
	}

	> .library-item {
		text-decoration: none;
		cursor: pointer;
		display: flex;
		flex-direction: column;
		margin-right: 2em;
		margin-bottom: 2em;

		/* PLACEHOLDER */
		&.placeholder {
			.poster {
				background-color: #202020;
				min-height: 247px;
			}

			.info {
				.author {
					background-color: #202020;
					height: 1em;
					width: 7em;
					margin-bottom: 3px;
				}

				.title {
					background-color: #202020;
					height: 1em;
					width: 4em;
				}
			}
		}

		.poster {
			position: relative;
			overflow: hidden;
			width: 165px;
			height: 247px;
			border-radius: var(--radius-2);
			border: var(--border-size-1) solid transparent;
			transition: border 0.25s;

			&:hover {
				border-color: var(--brand);
			}

			img {
				width: 100%;
				height: 100%;
				object-fit: cover;
			}

			.bottom-right {
				z-index: 99;
				position: absolute;
				bottom: 0px;
				right: 3px;
				display: none;
			}

			&:hover .bottom-right {
				display: block;
			}
		}

		.info {
			margin-top: 10px;
			display: flex;
			flex-direction: column;

			.title {
				color: var(--text1);
				text-decoration: none;
				font-size: var(--font-size-2);

				margin-block: 0;
				text-overflow: ellipsis;
				overflow: hidden;
				white-space: nowrap;

				&:hover {
					text-decoration: underline;
				}
			}


			.author {
				color: var(--text2);
				text-decoration: none;
				font-size: var(--font-size-1);

				margin-block: 0;
				text-overflow: ellipsis;
				overflow: hidden;
				white-space: nowrap;

				&:hover {
					text-decoration: underline;
				}
			}
		}
	}
}



/* MENU LIST */

.menu-list {
	background-color: var(--surface1);
	padding: 0.5em 0px;

	user-select: none;

	> .menu-item {
		color: var(--text2);
		font-size: var(--font-size-2);
		padding: 0px 1em;
		cursor: pointer;

		&:hover {
			background-color: var(--surface3);
			color: var(--text1);
		}
	}
}


/* LIBRARY EXTERNAL BOOK SEARCH */
.external-book-search-popup {
	//

	> .external-book-search-container {
		overflow-y: auto;

		> h2 {
			margin-bottom: 1em;
		}

		> .book-search-items {
			//

			> .book-search-item {
				display: flex;
				margin-bottom: 0.5em;
				cursor: pointer;

				> img {
					height: 16em;
				}

				> .book-info {
					//
				}
			}
		}
	}
}

